Updated homepage design and fixed navbar issue

--- a/about.html
+++ b/about.html
@@ -392,7 +392,7 @@
                 <img src="https://i.ibb.co/PvccRt4Z/mukharji.png" alt="Dr. Avishek Mukherjee">
             </div>
             <div class="av-profile-content">
-                <h2 class="av-section-title">About Dr. Avishek</h2>
+                <h2 class="av-section-title">About Dr. Avishek Mukherjee</h2>
                 <p class="av-profile-text">Dr. Avishek Mukherjee is one of the foremost practising urosurgeons in Eastern India. Trained at two of India's most prestigious medical institutes – AIIMS New Delhi and PGI Chandigarh – he brings over two decades of expertise in urological care with a rare blend of clinical excellence, innovation, and patient compassion.</p>
                 <p class="av-profile-text">After completing his MCh in Urosurgery at PGI Chandigarh in 2003, Dr. Avishek moved to Kolkata where he worked at Wockhardt Hospital and Kidney Institute alongside legendary surgeons. His journey reflects a commitment to bringing world-class urological care to patients across all economic backgrounds.</p>
             </div>
