--- a/blogging.html
+++ b/blogging.html
@@ -123,7 +123,7 @@
                 <!-- Blog Post 5 -->
                 <article class="blog-card">
                     <div class="card-image">
-                        <img src="https://i.ibb.co/WvdtcH3b/b5.jpg" loading="lazy" alt="Baby Food" class="blog-image">
+                        <img src="https://i.ibb.co/Qv2DzYF4/cinematic-view-hospital-scene-with-people-working-healthcare-system.jpg" loading="lazy" alt="Baby Food" class="blog-image">
                         <!-- <div class="card-badge">Nutrition</div> -->
                     </div>
                     <div class="card-content">
@@ -131,8 +131,8 @@
                             <span class="date">April 20, 2025</span>
                             <span class="read-time">8 min read</span>
                         </div>
-                        <h3 class="blog-title"> "Robotic Surgery in Urology: Precision & Benefits"</h3>
-                        <p class="blog-excerpt">Robotic-assisted surgery has revolutionized the field of urology, offering patients less invasive options with faster recovery and improved outcomes. This advanced technique is now widely used for procedures involving the kidneys, bladder, and prostate.</p>
+                        <h3 class="blog-title"> "Laparoscopic Uro-Surgery: Minimally Invasive Techniques & Benefits"</h3>
+                        <p class="blog-excerpt">Laparoscopic surgery has transformed modern urology, providing patients with less invasive treatment options that offer faster recovery times and excellent outcomes. This advanced surgical approach is now routinely used for various procedures involving the kidneys, bladder, prostate, and ureters.</p>
                         <div class="card-footer">
                             <a href="viewblog5.html" class="read-more">
                                 Read More
